Revision history for Perl extension Dist-Zilla-LocaleTextDomain

0.81

0.80  2012-10-01T19:00:55Z
      - Switched from `system()` to IPC::Run3, so that STDOUT and STDERR
        messages can be passed to the Dist::Zilla logger.
      - Added new `dzil` commands:
        + `msg-scan` - Scan modules for messages to create translation template file
        + `msg-init` - Create a new language translation file
        + `msg-merge` - Merge message changes into translation files
      - Added short tutorial as main documentation, Dist::Zilla::LocaleTextDomain.
      
0.10  2012-09-06T22:12:48Z
      - Initial release with just the LocaleTextDomain plugin.