@@ -2,19 +2,22 @@
 
 use strict;
 use warnings;
-use Test::More tests => 5;
+use Test::More tests => 11;
 
 require_ok 'Dist::Zilla::Plugin::LocaleTextDomain';
 is_deeply [Dist::Zilla::Plugin::LocaleTextDomain->mvp_multivalue_args],
     [qw(language)], 'Should have mvp_multivalue_args';
 
-require_ok 'Dist::Zilla::App::Command::add_lang';
-isa_ok 'Dist::Zilla::App::Command::add_lang', 'App::Cmd::Command';
-can_ok 'Dist::Zilla::App::Command::add_lang' => qw(
-    command_names
-    abstract
-    usage_desc
-    opt_spec
-    validate_args
-    execute
-);
+for my $cmd (qw(msg_init msg_scan msg_merge)) {
+    my $module = "Dist::Zilla::App::Command::$cmd";
+    require_ok $module;
+    isa_ok $module => 'App::Cmd::Command';
+    can_ok $module => qw(
+        command_names
+        abstract
+        usage_desc
+        opt_spec
+        validate_args
+        execute
+    );
+}
